# ext-typst

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  build.rs  composer.json  mago.toml  phpunit.xml.dist
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml  sync-stubs.yml
docs/: .gitattributes  content.md  generate.php
docs/fixtures/: card.php  card.typ  template.html
examples/: async.php  benchmark.php  chunked-reading.php  custom-fonts.php  error-handling.php  hello.php  image-options.php  inputs.php  inspect.php  invoice.php  multi-page.php  playground.php
examples/templates/: heavy.typ  invoice.typ  playground.typ
src/: lib.rs
src/extension/: clone.rs  compiler.rs  document.rs  image_options.rs  input.rs  inspector.rs  mod.rs  pdf_options.rs  pending.rs  source.rs  world.rs
src/extension/diagnostic/: compilation_result.rs  diagnostic_entry.rs  mod.rs  source_span.rs
src/extension/enums/: image_format.rs  mod.rs  pdf_standard.rs  severity.rs
src/internal/: mod.rs  world.rs
stubs/Typst/: Compiler.php  Document.php  ImageFormat.php  ImageOptions.php  Inspector.php  PdfOptions.php  PdfValidator.php  PdfVersion.php  PendingDocument.php  Source.php  World.php  functions.php
tests/: CompilerTest.php  DocumentTest.php  EnumTest.php  ExceptionTest.php  InputTest.php  InspectTest.php  OptionsTest.php  OutputTest.php  PendingDocumentTest.php  ReflectionTest.php  StabilityTest.php  TypstTest.php  WorldTest.php
tests/fixtures/: hello.typ  helpers.typ  nested-a.typ  nested-b.typ
(+25 files in other folders)
