[package]
name = "ext-typst"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = { version = "0.15.6", features = ["enum"] }
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-svg = "0.14.2"
typst-syntax = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
image = { version = "0.25.9", features = ["png", "jpeg"] }
parking_lot = "0.12.5"
chrono = "0.4"

[build-dependencies]
ext-php-rs-build = "0.1.1"

[lints.clippy]
pedantic = { level = "warn" }

[profile.release]
lto = true
codegen-units = 1
strip = true
